--- a/frontend/src/components/Bodyframe/Bodyframe.css
+++ b/frontend/src/components/Bodyframe/Bodyframe.css
@@ -87,7 +87,7 @@ ul#bottom-display {
 
 ul#bottom-display {
     width: 200%;
-    animation: slide-left 45s infinite;
+    animation: slide-left 70s infinite;
 }
 
 ul#bottom-display li {
